--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <td class="sosmed" colspan="2">
                     <hr>
                 <center>
-                    <h1 class="judul">Follow Me: </h1>
+                    <h1 class="judul">Click to Follow Me: </h1>
                 </center>
                     <div>
                         <div class="isiisi">
