--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             </li>
                             <li>
                                 Pemrograman Web
-                                <div class="level" style="width:10%">
+                                <div class="level" style="width:5%">
                                     10%
                                 </div>
                             </li>
@@ -146,6 +146,14 @@
                     </table>
                 </td>
             </tr>
+            <td>
+                <!--button Tugas 1 JavaScript-->
+                    <div class="pindah-page">
+                        <form method="get" action="./hitung.html">
+                            <button type="tugas1" name="button">Tugas 1 JavaScript</button>
+                        </form>
+                    </div>
+            </td>
             <tr>
                 <!-- Hobi -->
                 <td class="hobi" colspan="2">
@@ -186,7 +194,7 @@
                 <td class="sosmed" colspan="2">
                     <hr>
                 <center>
-                    <h1 class="judul">Click to Follow Me: </h1>
+                    <h1 class="judul">Follow Me: </h1>
                 </center>
                     <div>
                         <div class="isiisi">
