--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
                             <button type="tugas1" name="button">Tugas 1 JavaScript</button>
                         </form>
                     </div>
+                <!--button Tugas OOP dan Getter & Setter-->
+                    <div class="pindah-page">
+                        <form method="get" action="./mhs.html">
+                            <button type="tugas2" name="button">Tugas OOP dan Getter & Setter</button>
+                        </form>
+                    </div>
             </td>
             <tr>
                 <!-- Hobi -->
