--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
                             <button type="tugas2" name="button">Tugas OOP dan Getter & Setter</button>
                         </form>
                     </div>
+                <!--button Tugas JSON-->
+                    <div class="pindah-page">
+                        <form method="get" action="./covid19.html">
+                            <button type="tugas3" name="button">Tugas JSON</button>
+                        </form>
+                    </div>
             </td>
             <tr>
                 <!-- Hobi -->
