--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
                             <button type="tugas3" name="button">Tugas JSON</button>
                         </form>
                     </div>
+                <!--button Tugas REACT-->
+                    <div class="pindah-page">
+                        <form method="get" action="https://hijirismail.github.io/Tugas-React/">
+                            <button type="tugas3" name="button">Tugas REACT</button>
+                        </form>
+                    </div>
             </td>
             <tr>
                 <!-- Hobi -->
